Update 2: searchLieferant endpoint
